# leafsense

./: .gitignore  CAMERA_ENABLED_BUILD_READY.md  CAMERA_STATUS.txt  CHANGES_v1.4.0.md  CMakeLists.txt  Doxyfile  FINAL_UPDATE_COMPLETE.txt  GALLERY_EXPLAINED.md  LICENSE  ORGANIZE_PROJECT.sh  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.txt  README.md  UPDATE_SUMMARY_v1.4.0.md
build-arm64/: CMakeCache.txt  LeafSense  Makefile  cmake_install.cmake
build-arm64/LeafSense_autogen/: moc_predefs.h
build-arm64/LeafSense_autogen/2PYRYNOOPV/: moc_alerts_display.cpp  moc_alerts_display.cpp.d  moc_analytics_window.cpp  moc_analytics_window.cpp.d  moc_health_display.cpp  moc_health_display.cpp.d  moc_info_window.cpp  moc_info_window.cpp.d  moc_leafsense_data_bridge.cpp  moc_leafsense_data_bridge.cpp.d  moc_login_dialog.cpp  moc_login_dialog.cpp.d  moc_logs_window.cpp  moc_logs_window.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_sensors_display.cpp  moc_sensors_display.cpp.d  moc_settings_window.cpp  moc_settings_window.cpp.d  moc_virtual_keyboard.cpp  moc_virtual_keyboard.cpp.d
build-arm64/LeafSense_autogen/3YJK5W5UP7/: qrc_resources.cpp
database/: schema.sql
deploy/: CAMERA_SETUP_GUIDE.md  README.md  buildroot-camera.config  buildroot_defconfig  config.txt  configure-buildroot.sh  enable-camera-buildroot.sh  enable-camera.sh  linux-camera.config  screenshot_pi.sh  setup-onnxruntime-arm64.sh  setup-waveshare35c.sh  toolchain-rpi4-pi-libs.cmake  toolchain-rpi4.cmake  waveshare35c-config.txt
deploy/boot-overlay/: config.txt
deploy/buildroot-packages/: Config.in  external.desc  external.mk
deploy/buildroot-packages/package/leafsense-led/: 99-leddev.rules  Config.in  leafsense-led.mk
deploy/buildroot-packages/package/leafsense-led/src/: COPYING  ledmodule.c  utils.c  utils.h
deploy/rootfs-overlay/etc/init.d/: S99leafsense
deploy/rootfs-overlay/etc/profile.d/: leafsense-qt.sh
deploy/rootfs-overlay/opt/leafsense/: start_leafsense.sh
docs/: 00-PROJECT-STATUS.md  00-TERMINOLOGY.md  01-OVERVIEW.md  02-ARCHITECTURE.md  03-MACHINE-LEARNING.md  04-BUILDROOT-IMAGE.md  04-NETWORKING.md  04-RASPBERRY-PI-DEPLOYMENT.md  05-BUILDROOT-IMAGE.md  05-KERNEL-MODULE.md  05-RASPBERRY-PI-DEPLOYMENT.md  06-DATABASE.md  06-DEVICE-DRIVER.md  06-RASPBERRY-PI-DEPLOYMENT.md  07-DATABASE.md  07-DEVICE-DRIVER.md  07-GUI.md  08-DATABASE.md  08-GUI.md  08-TROUBLESHOOTING.md  09-CHANGELOG.md  09-GUI.md  09-TROUBLESHOOTING.md  10-CHANGELOG.md  10-IMPLEMENTATION-REPORT.md  10-TROUBLESHOOTING.md  11-CHANGELOG.md  11-IMPLEMENTATION-REPORT.md  11-SENSOR-ACTUATOR-INTEGRATION.md  12-IMPLEMENTATION-REPORT.md  12-SENSOR-ACTUATOR-INTEGRATION.md  13-SENSOR-ACTUATOR-INTEGRATION.md  13-TESTING-GUIDE.md  14-KERNEL-MODULE.md  14-TESTING-GUIDE.md  15-DEMO-GUIDE.md  15-TOUCHSCREEN-CONFIGURATION.md  16-BUILDROOT-PACKAGES.md  16-KERNEL-MODULE.md  17-TERMINOLOGY.md  (+10 more)
docs/latex/: README.md  appendices.tex  conclusion-chapter.tex  glossary.tex  implementation-chapter.tex  main-implementation.tex  references.bib  results-chapter.tex  testcases.tex
docs/latex/images/: README.md
drivers/kernel_module/: ..module-common.o.cmd  .Module.symvers.cmd  .led.ko.cmd  .led.mod.cmd  .led.mod.o.cmd  .led.o.cmd  .ledmodule.o.cmd  .modules.order.cmd  .utils.o.cmd  Makefile  ledmodule.c
include/application/gui/: alerts_display.h  analytics_window.h  health_display.h  info_window.h  leafsense_data_bridge.h  login_dialog.h  logs_window.h  mainwindow.h  sensors_display.h  settings_window.h
include/application/gui/theme/: colors.h  theme_manager.h
include/application/ml/: ML.h
include/drivers/actuators/: AlertLed.h  Heater.h  Pumps.h
include/drivers/sensors/: ADC.h  Cam.h  PH.h  Sensor.h  TDS.h  Temp.h
include/middleware/: IdealConditions.h  MQueueHandler.h  Master.h  dDatabase.h  dbManager.h
ml/: download_dataset.py  leafsense_model_classes.txt  test_ml.cpp  test_ml_dataset.cpp  train_model.py
ml/dataset_4class/: classes.txt
resources/: resources.qrc
scripts/: README.md  cross-compile-arm64.sh
src/: CMakeLists.txt  main.cpp  test_cmake.txt
src/application/gui/: alerts_display.cpp  analytics_window.cpp  health_display.cpp  info_window.cpp  leafsense_data_bridge.cpp  login_dialog.cpp  logs_window.cpp  main.cpp  mainwindow.cpp  sensors_display.cpp  settings_window.cpp
src/application/gui/theme/: theme_manager.cpp
src/application/ml/: ML.cpp
src/drivers/actuators/: AlertLed.cpp  Heater.cpp  Pumps.cpp
src/drivers/sensors/: ADC.cpp  Cam.cpp  PH.cpp  Sensor.cpp  TDS.cpp  Temp.cpp
src/middleware/: IdealConditions.cpp  MQueueHandler.cpp  Master.cpp  dDatabase.cpp  dbManager.cpp
tests/: README.md
